# visvoai

./: AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  TRADEMARKS.md
.github/: dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: codeql.yml  publish.yml  tests.yml
examples/: 02_choose_and_meter.py  04_streaming_events.py  07_sqlite_audit_trail.py  README.md
examples/cli/: config.toml  mytools.py
examples/cli/agents/: reviewer.md
examples/cli/pr-review/: SKILL.md  checklist-quick.md  sql-rules.md
examples/cli/release-notes/: SKILL.md
visvoai/: README.md  pyproject.toml
visvoai-ai/: AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
visvoai-ai/examples/: 01_hello_model.py  03_openai_compatible_and_custom.py  README.md
visvoai-ai/src/visvoai/ai/: __init__.py  deployments.py  identity.py  model_registry.py  resolve.py  search.py  thinking.py  usage.py
visvoai-ai/src/visvoai/ai/catalog/: __init__.py  engine.py
visvoai-ai/src/visvoai/ai/catalog/data/: __init__.py
visvoai-ai/src/visvoai/ai/catalog/sources/: __init__.py  modelsdev.py  remote.py
visvoai-ai/src/visvoai/ai/providers/: __init__.py  anthropic.py  base.py  config.py  factory.py  gemini.py  openai_compat.py
visvoai-ai/tests/: test_catalog.py  test_catalog_id_filter.py  test_config.py  test_deployments.py  test_identity.py  test_key_cleaning.py  test_modelsdev.py  test_openai_compat.py  test_remote.py  test_resolve.py  test_search.py  test_thinking.py
visvoai-cli/: AGENTS.md  CHANGELOG.md  README.md  README_DRAFT.md  pyproject.toml
visvoai-cli/docs/: README.md  hero.tape  make_stills.py
visvoai-cli/examples/: README.md
visvoai-cli/examples/skills/pr-review/: checklist-deep.md
visvoai-cli/examples/skills/release-notes/: format.md
visvoai-cli/src/visvoai/cli/: __init__.py  agent.py  agent_runs.py  agent_turn.py  agents.py  app.py  catalog.py  checkpoints.py  cli_changelog.py  commands.py  context.py  demo.py  gated_tools.py  gitio.py  grid.py  hitl_modes.py  iconography.py  keys.py  main.py  mcp.py  mermaid.py  mock.py  palette_tokens.json  pathguard.py  permissions.py  processes.py  render.py  rewind.py  runtime.py  session_state.py  sessions.py  skills.py  specstore.py  state.py  store.py  termbg.py  theme.py  tool_render.py  toolkit.py  turn_events.py
visvoai-cli/src/visvoai/cli/assets/: CHANGELOG.md
visvoai-cli/src/visvoai/cli/context/: AGENTS.md  __init__.py  assembler.py  config.py  protocol.py  providers.py
visvoai-cli/src/visvoai/cli/screens/: AGENTS.md  __init__.py  agents_view.py  base.py  branch_view.py  chrome.py  git_view.py  mcp_view.py  model_view.py  process_view.py  rewind_view.py  runs_view.py  sessions.py  skills_view.py
visvoai-cli/src/visvoai/cli/tools/: AGENTS.md  __init__.py  _common.py  background.py  files.py  shell.py  shellsafe.py  web.py
visvoai-cli/src/visvoai/cli/widgets/: AGENTS.md  __init__.py  agent_panel.py  citation.py  conversation.py  diff.py  error.py  file_creation.py  file_menu.py  form.py  free_text.py  mermaid_card.py  output.py  output_toolbar.py  plan.py  prompt.py  read_chain.py  reconciliation.py  run_steps.py  selection.py  severity_output.py  slash.py  status.py  streaming_output.py  structure_tree.py  system_note.py  textarea_guard.py  tool_row.py  welcome.py
visvoai-cli/tests/: conftest.py  test_adaptive_tips.py  test_agent_runs.py  test_agents.py  test_case_arcs.py  test_catalog.py  test_changelog_state.py  test_checkpoint_guard.py  test_checkpoints.py  test_command_suggest.py  test_compact.py  test_context_gauge.py  test_context_pipeline.py  test_demo_flow.py  test_demos.py  test_diff_syntax.py  test_error.py  test_feedback_fixes.py  test_file_mention.py  test_form.py  test_free_text.py  test_git_view.py  test_hitl_modes.py  test_import_seams.py  test_keys.py  test_markdown.py  test_mcp.py  test_mermaid.py  test_model_view.py  test_output.py  test_output_toolbar.py  test_pathguard_permissions.py  test_permission_gate.py  test_plan.py  test_prefs_persistence.py  test_processes.py  test_prompt.py  test_read_chain.py  test_real_tool_render.py  test_reconciliation.py  (+36 more)
visvoai-core/: AGENTS.md  BUILD-YOUR-OWN.md  CHANGELOG.md  README.md  pyproject.toml
visvoai-core/examples/: 01_minimal_agent.py  02_streaming_events.py  03_creating_tools.py  04_extend_the_runtime.py  05_tool_retrieval.py  06_sqlite_audit_trail.py  07_everything_together.py  08_subagents.py  README.md
visvoai-core/src/visvoai/core/: README.md  __init__.py  adapt.py  context.py  graph.py  persistence.py  results.py  retrieval.py  runtime.py  state.py  tools.py
visvoai-core/tests/: test_adapt.py  test_graph_loop.py  test_retrieval_catalog.py  test_retrieval_wiring.py  test_runtime_hooks.py  test_tool_lifecycle.py
