[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visvoai-ai"
version = "0.1.0"
description = "VisvoAI — Unified multi-provider LLM access (Gemini, Anthropic, OpenAI, Together)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "VisvoAI", email = "akshant.jain2@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "langchain-core>=0.2",
    "google-genai>=0.7",
    "anthropic>=0.25",
    "openai>=1.0",
]

[project.optional-dependencies]
# Together/Groq/OpenRouter need no extra package — they run on the OpenAI-compat
# path (ChatOpenAI + base_url, see providers/openai_compat.py). Only an API key
# and base_url (auto-resolved in providers/config.py) are required.
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["src"]
