[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visvoai-ai"
version = "0.2.2"
description = "VisvoAI — Unified multi-provider LLM access (Gemini, Anthropic, OpenAI, Together)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "VisvoAI", email = "akshant.jain2@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "langchain-core>=0.2",
]

[project.optional-dependencies]
# Per-provider extras pull only the LangChain integration you actually use.
# Each provider's chat model is imported lazily, so the base install stays light.
# google-genai is the official SDK used directly for grounded search (GeminiProvider.search).
gemini = ["langchain-google-genai>=2.0", "google-genai>=1.0"]
anthropic = ["langchain-anthropic>=0.2"]
# Covers OpenAI plus every OpenAI-compatible provider (Together/Groq/OpenRouter/
# vLLM/…) — they all run on the ChatOpenAI + base_url path (providers/openai_compat.py).
openai = ["langchain-openai>=0.2"]
all = [
    "langchain-google-genai>=2.0",
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Bundled models.dev offline snapshot (catalog/data/) — generated, ships in the wheel.
"visvoai.ai.catalog.data" = ["*.json.gz"]
