[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visvoai-ai"
version = "0.2.3"
description = "VisvoAI — Unified multi-provider LLM access (Gemini, Anthropic, OpenAI, Together)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "VisvoAI", email = "akshant.jain2@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.13.4",
    "langchain-core>=1.4.9",
]

[project.urls]
Homepage = "https://visvoai.com"
Repository = "https://github.com/VisvoAI/visvoai"
Changelog = "https://github.com/VisvoAI/visvoai/blob/main/visvoai-ai/CHANGELOG.md"

[project.optional-dependencies]
# Per-provider extras pull only the LangChain integration you actually use.
# Each provider's chat model is imported lazily, so the base install stays light.
# google-genai is the official SDK used directly for grounded search (GeminiProvider.search).
gemini = ["langchain-google-genai>=4.2.7", "google-genai>=2.12.1"]
anthropic = ["langchain-anthropic>=1.4.8"]
# Covers OpenAI plus every OpenAI-compatible provider (Together/Groq/OpenRouter/
# vLLM/…) — they all run on the ChatOpenAI + base_url path (providers/openai_compat.py).
openai = ["langchain-openai>=1.3.5"]
all = [
    "langchain-google-genai>=4.2.7",
    "langchain-anthropic>=1.4.8",
    "langchain-openai>=1.3.5",
]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Bundled models.dev offline snapshot (catalog/data/) — generated, ships in the wheel.
"visvoai.ai.catalog.data" = ["*.json.gz"]
