[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visvoai-cli"
version = "0.7.4"
description = "VisvoAI — Developer tool CLI powered by the visvoai-core agent runtime"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "VisvoAI", email = "akshant.jain2@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "visvoai-core>=0.1.0",
    # Provider resolution (get_provider/get_model) is used directly in main.py.
    # [all] — the CLI bundles EVERY provider integration on purpose: its model
    # picker exposes the full models.dev catalog, so any provider must be runnable
    # out of the box (a Gemini-only install would crash on selecting a Claude/OpenAI
    # model). Leanness lives in visvoai-ai's per-provider extras, not in the app.
    "visvoai-ai[all]>=0.2.2",
    "click>=8.1",
    "rich>=13.0",
    # The terminal UI (REPL) is built on Textual; .env auto-load via python-dotenv.
    "textual>=8",
    "python-dotenv>=1.0",
    # Syntax highlighting for diffs/code blocks (used directly in widgets/diff.py).
    "pygments>=2.17",
    # MCP servers (mcp.py): protocol transport (stdio/HTTP) + MCP-tool→LangChain-tool
    # conversion. Pulls the official `mcp` SDK; 0.3 needs mcp>=1.28.
    "langchain-mcp-adapters>=0.3",
]

[project.scripts]
visvoai = "visvoai.cli.main:cli"

[project.optional-dependencies]
# No per-provider extras: the base install already bundles every integration
# (visvoai-ai[all]) so the model picker's full catalog is runnable out of the box.
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-timeout>=2.3", "pytest-xdist>=3.6"]

[tool.setuptools.packages.find]
where = ["src"]

# Ship non-Python assets in the wheel: theme.py reads palette_tokens.json from its
# own directory at import time; the assets dir holds the brand logo.
[tool.setuptools.package-data]
"visvoai.cli" = ["palette_tokens.json", "assets/*"]

# Local path sources so dev/tests consume the sibling packages from this monorepo
# (pip/PyPI ignore this table — it resolves the published versions there instead).
[tool.uv.sources]
visvoai-ai = { path = "../visvoai-ai", editable = true }
visvoai-core = { path = "../visvoai-core", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
# -n auto runs the Textual app tests in parallel; --timeout fails a stuck test fast.
addopts = "-n auto --timeout=30 --timeout-method=signal"
