[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visvoai"
version = "0.1.0"
description = "VisvoAI — installs the visvoai terminal coding agent (meta-package)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "VisvoAI", email = "akshant.jain2@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["visvoai-cli"]

[tool.setuptools]
packages = []
